fixed tasks alignment

--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ body {
     display: grid;
     grid-template-columns: 2rem auto 1rem;
     grid-auto-rows: auto;
-    align-items: baseline;
+    align-items: center;
     padding: 0 .5rem;
 }
 
